views/scss/plugins/magnifier.scss
@import "inc/bootstrap";

.magnifier {
    position: absolute;
    top: 0;
    left: 0;
    width: 250px;
    height: 100px;
    min-width: 50px;
    min-height: 25px;
    overflow: hidden;
    z-index: 10000;
    background-color: $uiGeneralContentBg;
    opacity: 1;
    border: solid 1px $uiClickableHoverBg;
    @include border-radius(5);
    @include vendor-prefix(property, transform, translateZ(0));
    @include box-shadow();

    @include keyframes(fadeIn) {
        0%   {opacity:0; visibility: visible;}
        100% {opacity:.8; visibility: visible;}
    }
    @include keyframes(fadeOut) {
        0%   {opacity:.8; visibility: visible;}
        100% {opacity:0; visibility: hidden;}
    }
    @include keyframes(pop) {
        0%   {opacity:0;  visibility: visible;}
        50%  {opacity:.5; visibility: visible; transform: scale(2);}
        100% {opacity:0;  visibility: hidden;  transform: scale(3);}
    }

    .level {
        position: absolute;
        overflow: hidden;
        z-index: 1;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        background: transparent;
        color: $uiClickableHoverBg;
        opacity: 1;

        @include font-size(50);
        @include flex-container();
        @include vendor-prefix(align-items, center, property);
        @include vendor-prefix(justify-content, center, property);
        @include vendor-prefix(animation, pop 400ms forwards, property);

        &:before {
            content: "x";
        }
    }

    .overlay {
        position: absolute;
        overflow: hidden;
        z-index: 2;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        background: transparent;
    }

    > .controls {
        position: absolute;
        z-index: 3;
        bottom: 0;
        right: 0;
        background-color: $uiGeneralContentBg;

        @include vendor-prefix(animation, fadeOut 600ms forwards, property);
        @include border-radius-top-left(5);
        border-top: solid 1px $uiClickableHoverBg;
        border-left: solid 1px $uiClickableHoverBg;

        &:hover {
            opacity: 1!important;
        }

        a {
            text-decoration: none;
            @include font-size(16);
            margin: 0 2px;
        }
    }

    .inner {
        position: absolute;
    }

    &.sizing {
        border-style: dashed;

        .inner, .controls, .level {
            opacity: .45!important;
        }
    }

    &:hover {
        .controls {
            @include vendor-prefix(animation, fadeIn 600ms forwards, property);
        }
    }
}

